# Chatbot-v10

./: INDUSTRIAL_RAG_ARCHITECTURE.md  README.md  pyproject.toml
app/api/: main.py  schemas.py
app/core/: models.py
app/generation/: qa.py
app/ingestion/: chunker.py  parser.py
app/retrieval/: index.py
app/ui/: index.html
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/lib/: api.js
frontend/src/pages/: ChatPage.jsx  DashboardPage.jsx  SettingsPage.jsx
frontend/src/store/: useAppState.js
tests/: test_api.py
