[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-rag"
version = "0.1.0"
description = "Enterprise-grade industrial RAG service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["frontend*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
